--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
     "next": "15.5.6",
     "react": "^19.1.0",
     "react-dom": "19.1.0"
@@ -20,8 +23,10 @@
     "@types/node": "^20",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "drizzle-kit": "^0.31.6",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
