--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "bootstrap-icons": "^1.13.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "formidable": "^3.5.4",
+    "multiparty": "^4.2.3",
     "next": "15.5.6",
     "react": "^19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/formidable": "^3.4.6",
     "@types/node": "^20",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
