--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multiparty": "^4.2.3",
     "next": "15.5.6",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0",
     "xlsx": "^0.18.5"
   },
